# face_classification

./: Dockerfile  README-intu.md  README.md  requirements-arm64.txt
python/: AUTHORS  requirements.txt  setup.cfg  setup.py
src/: face_emotion.cfg  face_emotion.py
src/self/topics/: topic_client.py
