[metadata]
name = face_classification
author = Christopher Dye
author-email = dyec@us.ibm.com
summary = face classification project packaging
description-file = README
license = MIT
requires-python = 3.5
version = 0.1.0
classifier =
    Development Status :: 4 - Beta
        Operating System :: Linux
        Programming Language :: Python
keywords =
    setup
    distutils
[files]
packages =
    face_classification
[pbr]
warnerrors = True
[wheel]
universal = 1
